add jquery support

--- a/src/45_Greetr.html
+++ b/src/45_Greetr.html
@@ -6,7 +6,14 @@
 </head>
 
 <body>
-
+    <div id="logindiv">
+        <select id="lang">
+        <option value="en">English</option>
+        <option value="es">Spanish</option>
+    </select>
+        <input type="button" value="Login" id="login" />
+    </div>
+    <h1 id="greetings"></h1>
     <script type="text/javascript" src="jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="45_Greetr.js"></script>
     <script type="text/javascript" src="45_app.js"></script>
